header style - implemented mixins for btn

--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Skilled e-learning landing page</title>
   </head>
   <body>
-    <h1>Welcome</h1>
-
+    <header>
+      <div class="max-width-wrapper">
+        <div class="header-container">
+          <img class="logo" src="./assets/logo-dark.svg" alt="logo" />
+          <a class="top" href="#">Get Started</a>
+        </div>
+      </div>
+    </header>
+    <footer></footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
