intro section with mobile styles

--- a/index.html
+++ b/index.html
@@ -20,13 +20,39 @@
   <body>
     <header>
       <div class="max-width-wrapper">
-        <div class="header-container">
+        <div class="container">
           <img class="logo" src="./assets/logo-dark.svg" alt="logo" />
           <a class="top" href="#">Get Started</a>
         </div>
       </div>
     </header>
-    <footer></footer>
+    <main>
+      <div class="max-width-wrapper">
+        <div class="intro-container">
+          <div class="header-intro-chunk">
+            <h1 class="header-title">Maximize skill, minimize budget</h1>
+            <p class="header-content">
+              Our modern courses across a range of in-demand skills will give
+              you the knowledge you need to live the life you want.
+            </p>
+            <a class="intro-btn" href="#">Get Started</a>
+          </div>
+
+          <div class="header-intro-image">
+            <img
+              src="./assets/image-hero-mobile.png"
+              alt="A women drinking coffee and taking courses"
+            />
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container footer">
+        <img class="logo" src="./assets/logo-light.svg" alt="footer-logo" />
+        <a class="bottom" href="#">Get Started</a>
+      </div>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
