mobile styles with cards

--- a/index.html
+++ b/index.html
@@ -46,6 +46,71 @@
           </div>
         </div>
       </div>
+
+      <div class="max-width-wrapper">
+        <div class="cards">
+          <div class="intro-card">Check out our most popular courses!</div>
+          <article>
+            <div class="card">
+              <img class="card-img" src="./assets/icon-animation.svg" />
+              <h2 class="card-title">Animation</h2>
+              <p class="card-content">
+                Learn the latest animation techniques to create stunning motion
+                design and captivate your audience.
+              </p>
+              <a class="card-link" href="#">Get Started</a>
+            </div>
+          </article>
+
+          <article>
+            <div class="card">
+              <img class="card-img" src="./assets/icon-design.svg" />
+              <h2 class="card-title">Design</h2>
+              <p class="card-content">
+                Create beautiful, usable interfaces to help shape the future of
+                how the web looks.
+              </p>
+              <a class="card-link" href="#">Get Started</a>
+            </div>
+          </article>
+
+          <article>
+            <div class="card">
+              <img class="card-img" src="./assets/icon-photography.svg" />
+              <h2 class="card-title">Photography</h2>
+              <p class="card-content">
+                Explore critical fundamentals like lighting, composition, and
+                focus to capture exceptional photos.
+              </p>
+              <a class="card-link" href="#">Get Started</a>
+            </div>
+          </article>
+
+          <article>
+            <div class="card">
+              <img class="card-img" src="./assets/icon-crypto.svg" />
+              <h2 class="card-title">Crypto</h2>
+              <p class="card-content">
+                All you need to know to get started investing in crypto. Go from
+                beginner to advanced with this 54 hour course.
+              </p>
+              <a class="card-link" href="#">Get Started</a>
+            </div>
+          </article>
+
+          <article>
+            <div class="card">
+              <img class="card-img" src="./assets/icon-business.svg" />
+              <h2 class="card-title">Business</h2>
+              <p class="card-content">
+                A step-by-step playbook to help you start, scale, and sustain
+                your business without outside investment.
+              </p>
+              <a class="card-link" href="#">Get Started</a>
+            </div>
+          </article>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="container footer">
