--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
 
           <div class="header-intro-image">
             <img
+              class="mobile-header-img"
               src="./assets/image-hero-mobile.png"
+              alt="A women drinking coffee and taking courses"
+            />
+            <img
+              class="tablet-header-img"
+              src="./assets/image-hero-tablet@2x.webp"
               alt="A women drinking coffee and taking courses"
             />
           </div>
