--- a/index.html
+++ b/index.html
@@ -39,23 +39,35 @@
           </div>
 
           <div class="header-intro-image">
-            <img
-              class="mobile-header-img"
-              src="./assets/image-hero-mobile.png"
-              alt="A women drinking coffee and taking courses"
-            />
-            <img
-              class="tablet-header-img"
-              src="./assets/image-hero-tablet@2x.webp"
-              alt="A women drinking coffee and taking courses"
-            />
+            <picture>
+              <!-- large image -->
+              <source
+                srcset="./assets/image-hero-desktop.png"
+                media="(min-width: 90rem)"
+                class="mobile-header-img"
+              />
+              <!-- medium image -->
+              <source
+                srcset="./assets/image-hero-tablet.png"
+                media="(min-width: 48rem)"
+                class="mobile-header-img"
+              />
+              <!-- smallest image (default) -->
+              <img
+                src="./assets/image-hero-mobile.png"
+                alt="A women drinking coffee and taking courses"
+                class="mobile-header-img"
+              />
+            </picture>
           </div>
         </div>
       </div>
 
       <div class="max-width-wrapper">
         <div class="cards">
-          <div class="intro-card">Check out our most popular courses!</div>
+          <div class="intro-card">
+            <span>Check out our most popular courses!</span>
+          </div>
           <article>
             <div class="card">
               <img class="card-img" src="./assets/icon-animation.svg" />
