--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <article>
             <div class="card">
-              <img class="card-img" src="./assets/icon-animation.svg" />
+              <img class="card-img" src="./assets/icon-animation.svg" alt="" />
               <h2 class="card-title">Animation</h2>
               <p class="card-content">
                 Learn the latest animation techniques to create stunning motion
@@ -82,7 +82,7 @@
 
           <article>
             <div class="card">
-              <img class="card-img" src="./assets/icon-design.svg" />
+              <img class="card-img" src="./assets/icon-design.svg" alt="" />
               <h2 class="card-title">Design</h2>
               <p class="card-content">
                 Create beautiful, usable interfaces to help shape the future of
@@ -94,7 +94,11 @@
 
           <article>
             <div class="card">
-              <img class="card-img" src="./assets/icon-photography.svg" />
+              <img
+                class="card-img"
+                src="./assets/icon-photography.svg"
+                alt=""
+              />
               <h2 class="card-title">Photography</h2>
               <p class="card-content">
                 Explore critical fundamentals like lighting, composition, and
@@ -106,7 +110,7 @@
 
           <article>
             <div class="card">
-              <img class="card-img" src="./assets/icon-crypto.svg" />
+              <img class="card-img" src="./assets/icon-crypto.svg" alt="" />
               <h2 class="card-title">Crypto</h2>
               <p class="card-content">
                 All you need to know to get started investing in crypto. Go from
@@ -118,7 +122,7 @@
 
           <article>
             <div class="card">
-              <img class="card-img" src="./assets/icon-business.svg" />
+              <img class="card-img" src="./assets/icon-business.svg" alt="" />
               <h2 class="card-title">Business</h2>
               <p class="card-content">
                 A step-by-step playbook to help you start, scale, and sustain
